# nrf5_crypto

./: CMakeLists.txt  headers.cmake  sources.cmake
components/libraries/crypto/: nrf_crypto.h  nrf_crypto_aead_backend.h  nrf_crypto_aes_backend.h  nrf_crypto_ecc_backend.h  nrf_crypto_ecdh_backend.h  nrf_crypto_ecdsa_backend.h  nrf_crypto_hash_backend.h  nrf_crypto_hmac_backend.h  nrf_crypto_rng_backend.h
ld/: nrf52833.ld
sdk_config/: sdk_config.h.old
